--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,84 @@
-body {
+:root {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  min-height: 100vh;
+  overflow-x: hidden !important;
+}
+
+nav {
+  background-color: #7c597ee1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1em;
+  box-shadow: 2px 2px 7px #000;
+  z-index: 2;
+}
+
+nav a {
+  text-decoration: none;
+  color: #fff;
+  font-family: 'Lobster' !important;
+}
+
+nav .brand-logo a {
+  font-size: 1.3em;
+  font-family: 'Kanit', sans-serif;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0 3em;
+  font-family: Roboto;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+nav ul a {
+  padding: 1.4em 1em;
+  display: inline-block;
+  transition: .5s;
+}
+
+nav ul a:hover {
+  background-color: #302030;
+}
+
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+  text-align: center;
+  background-color: #7c597ee1;
+}
+
+footer p {
+  color: #fff;
+  font-family: 'Lobster';
+  padding: 10px;
+}
+
+
+@media screen and (max-width:1024px) {
+  nav .brand-logo a {
+    font-size: 1em;
+  }
 }
